welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:8: error: not found: value c
      case 1 => c =color.RED
                ^PatternPicture:9: error: not found: value c
      case 2 => c = color.BLUE
                ^PatternPicture:10: error: not found: value c
      case 3 => c = color.GREEN
                ^PatternPicture:11: error: not found: value c
      case 4 => c = color.YELLOW
                ^PatternPicture:13: error: not found: value c
    coin(c)
         ^